ajustement connection Back and Front